# notmuch-w32

./: .gitignore  INSTALL  Makefile.am  README  configure.ac  crypto.c  debugger.c  gmime-filter-headers.c  gmime-filter-reply.c  hooks.c  notmuch-config.c  notmuch-insert.c  notmuch-new.c  notmuch-show.c  sprinter-sexp.c  tag-util.c
compat/: compat.h
gnulib/: .gitignore  Makefile.am
lib/: Makefile.am  database-private.h  database.cc  notmuch-private.h
m4/: .gitignore  gnulib-cache.m4
man/: Makefile.am
parse-time-string/: Makefile.am
util/: Makefile.am  xutil.c  xutil.h
