
dist_man_MANS = \
	man1/notmuch-config.1 \
	man1/notmuch-count.1 \
	man1/notmuch-dump.1 \
	man1/notmuch-new.1 \
	man1/notmuch-reply.1 \
	man1/notmuch-restore.1 \
	man1/notmuch-search.1 \
	man1/notmuch-setup.1 \
	man1/notmuch-show.1 \
	man1/notmuch-tag.1 \
	man1/notmuch.1 \
	man5/notmuch-hooks.5 \
	man7/notmuch-search-terms.7
